Host, WcfHostServer at AjSharpMachine
AjSharp.RunHost using WcfHostServer WcfHostClient instead RunServer

2010-05-18
HostedInvocationExpression
Support of at <host> <callable> with <args> in Parser, with tests

2010-05-19
Support of at <host> <callable> with <args>; as command in Parser
IsLocal in IHost
Host.IsLocal is true, XxxHostClient.IsLocal is false
Separate dictionaries for local and remote hosts in Machine
IHost.RegisterHost, work in progress

2010-05-20
IHost.OnRegisterHost with tests
Machine.GetLocalHosts, Machine.GetRemoteHosts with tests
IHost.Address with tests
RegisterRemotingHost.ajs new example
ProxyServerObject with test (inherits MarshalByRefObject)
DynamicObject.Marshal with test
Remove inherits MarshalByRefObject in DynamicObject
Add [Serializable] to DynamicObject, DynamicClassicObject
Save class name in DynamicClassicObject
IHost.Include, IHost.Execute(string commandtext)
Implements IHost.Include, IHost.Execute in Host, remoting Hosts and wcf hosts
RemotingHostExecuteCommand.ajs example with test
RemotingHostInclude.ajs example with test
New examples for AjSharp: Distributed/ServerAndCallNodes Distributed/ServerAndWorkerNodes
Serializable ExitException
Fix Parser for at host composite command

2010-05-23
Machine.CurrentTransaction
ITransactionalReference, TransactionalReference, Transaction: WIP

2010-05-24
new AjLanguage.Transactions namespace
Refactor TransactionalReference, Transaction
Machine.RegisterTransaction, Machine.UnregisterTransaction
First TransactionTests

2010-05-26
One more test in TransactionTests

2010-05-28
TransactionCommand
transaction <cmd> in Parser, with tests
Machine.RegisterSnapshot
TransactionReference.HasSnapshots, .ClearSnapshot with tests
New examples TransactionsTwoReferences.ajs, ReferenceSetAndGet.ajs

2010-10-01
In the global environment, Machine is the type, not the current Machine
In AjSharp, use Machine.Current instead of Machine
Minor improvements en Distributed examples